# video-transcribe

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: coder.md  reviewer.md
.claude/skills/: doc.md
.claude/skills/doc/: SKILL.md
.claude/skills/verify/: SKILL.md
docs/: PROJECT_OVERVIEW.md  ROADMAP.md  TECH_STACK.md  TESTING.md  TEST_PLAN.md  glm_asr_api.md  glm_asr_overview.md
docs/research/: cli_frameworks.md  ffmpeg_basics.md  glm_summary.md  openai_transcription_api.md  prompt_format.md  whisper_api.md  zai_api.md
examples/custom_prompt/: prompt.md
src/: conftest.py
src/video_transcribe/: __init__.py  __main__.py  cli.py  config.py  pipeline.py  test_config.py
src/video_transcribe/audio/: __init__.py  chunker.py  converter.py  test_chunker.py
src/video_transcribe/postprocess/: __init__.py  client.py  exceptions.py  filename.py  models.py  processor.py  prompts.py  test_filename.py
src/video_transcribe/transcribe/: __init__.py  adapter.py  exceptions.py  factory.py  glm_asr_client.py  merger.py  models.py  nemo_client.py  test_merger.py
tests/: __init__.py  conftest.py
